release and debug path